refactor: align workspace with Angular CLI 12

--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,15 @@
 ﻿<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
-        <meta content="Angular Heroes" name="description" />
-        <meta content="Aristeidis Bampakos" name="author" />
-        <link rel="shortcut icon" href="favicon.ico" />
-        <title>Angular Heroes</title>
-        <base href="/">
-
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    </head>
-    <body>
-        <app-root></app-root>
-    </body>
+<head>
+  <meta charset="utf-8">
+  <title>Angular Heroes</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+<body>
+  <app-root></app-root>
+</body>
 </html>
